// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      class="show-for-mobile"
    >
      Expenses
    </div>
    <div
      class="show-for-desktop"
    >
      Expense
    </div>
    <div
      class="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item-message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      class="show-for-mobile"
    >
      Expenses
    </div>
    <div
      class="show-for-desktop"
    >
      Expense
    </div>
    <div
      class="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note="some note"
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note="some note 2"
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="credit card"
      id="3"
      key="3"
      note="some note 3"
    />
  </div>
</div>
`;
